include/mosel_rt.h


typedef struct Model* mm_model;

typedef struct CBInit* mm_cbinit;

typedef struct Dsolist* mm_dsolib;

typedef struct Array* mm_array;

typedef union SetR* mm_set;

typedef struct Htentry* mm_proc;


typedef union Alltypes		/** AllTypes union **/
	{
	 mm_integer	integer;
	 mm_real	real;
	 mm_boolean	boolean;
	 mm_string	string;
	 mm_mpvar	mpvar;
	 mm_linctr	linctr;
	 mm_set		set;
	 mm_list	list;
	 mm_array	array;
	 mm_ref		ref;
	 mm_proc	proc;
	 mm_memblk	*memblk;
	 size_t		size;
	} mm_alltypes;

							/* Debugger functions */
int MM_RTC XPRMdbg_runmod(mm_model model,int *returned, const char *parlist,
	int (MM_RTC *dbgcb)(void *dctx,int vmstat, int lindex),void *dbgctx);

int MM_RTC XPRMdbg_getnblndx(mm_model model);

int MM_RTC XPRMdbg_clearbrkp(mm_model model,int lindex);

int MM_RTC XPRMdbg_setbrkp(mm_model model,int lindex);

int MM_RTC XPRMdbg_setstacklev(mm_model model,int level);

int MM_RTC XPRMdbg_getlocation(mm_model model,int lindex,int *line,
							const char **filename);

int MM_RTC XPRMdbg_findproclndx(mm_model model,mm_proc proc);

const char * MM_RTC XPRMgetnextanident(mm_model model, void **ref);

int MM_RTC XPRMgetannotations(mm_model model, const char *ident, const char *prefix, const char **ann, int maxann);

void MM_RTC XPRMgetarrsets(mm_array tab,mm_set sets[]);

							/* CB IO driver */
int MM_RTC XPRMcb_sendint(mm_cbinit cb,int i,int flush);

int MM_RTC XPRMcb_sendreal(mm_cbinit cb,double d,int flush);

int MM_RTC XPRMcb_sendstring(mm_cbinit cb,const char *text,int len,int flush);

int MM_RTC XPRMcb_sendctrl(mm_cbinit cb,unsigned char ctrl,int flush);

int MM_RTC XPRMbeginlicensing(int *haslic);

int MM_RTC XPRMendlicensing();

int MM_RTC XPRMsetdefstream(mm_model model,int wmd,const char *name);

int MM_RTC XPRMdate2jdn(int y,int m, int d);

void MM_RTC XPRMjdn2date(int jd,int *y,int *m, int *d);

void MM_RTC XPRMtime(int *jdn,int *t,int *utc);


struct Mosel_ni;

struct Dsointer;

int MM_RTC XPRMregstatdso(const char *name,int (*dsoinit)(struct Mosel_ni *,int *,int *,struct Dsointer **));

mm_dsolib MM_RTC XPRMpreloaddso(const char *name);

void * MM_RTC XPRMgetnextdsoproc(mm_dsolib dso,void *ref,const char **name,
				const char **partyp,int *nbpar, int *type);

void * MM_RTC XPRMgetnextdsoconst(mm_dsolib dso,void *ref,const char **name,
						int *type, mm_alltypes *value);

void * MM_RTC XPRMgetnextdsotype(mm_dsolib dso,void *ref,const char **name, unsigned int *flag);

void * MM_RTC XPRMgetnextdsoparam(mm_dsolib dso,void *ref,const char **name,
						const char **desc,int *type);

int MM_RTC XPRMgetdsoannotations(mm_dsolib dso, const char *prefix, const char **ann, int maxann);

int MM_RTC XPRMgetdsoparam(mm_model model,mm_dsolib dso, const char *name,
						int *type, mm_alltypes *value);

int MM_RTC XPRMdsotyptostr(mm_model model,int code, void *value,
							char *str, int size);

void MM_RTC XPRMautounloaddso(int yesno);

void MM_RTC XPRMflushdso(void);

mm_dsolib MM_RTC XPRMgetnextdso(mm_dsolib dso);

mm_dsolib MM_RTC XPRMfinddso(const char *name);

void MM_RTC XPRMsetdsopath(const char *path);

int MM_RTC XPRMgetdsopath(char *path,int len);

int MM_RTC XPRMgetdsoprop(mm_dsolib dso,int what,mm_alltypes *result);