include/xprm.bas


' DSO module
Declare Function XPRMregstatdso Lib "xprm_rt" Alias "_XPRMregstatdso@8" (ByVal name As String, ByVal dsoinit As Long) As Long
Declare Function XPRMpreloaddso Lib "xprm_rt" Alias "_XPRMpreloaddso@4" (ByVal name As String) As Long
Declare Function XPRMgetnextdsoproc Lib "xprmvb" Alias "vbXPRMgetnextdsoproc" (ByVal dso As Long, ByVal ref As Long, ByRef name As String, ByRef partyp As String, ByRef nbpar As Long, ByRef ftype As Long) As Long
Declare Function XPRMgetnextdsoconst Lib "xprmvb" Alias "vbXPRMgetnextdsoconst" (ByVal dso As Long, ByVal ref As Long, ByRef name As String, ByRef ctype As Long, ByRef value As Variant) As Long
Declare Function XPRMgetnextdsotype Lib "xprmvb" Alias "vbXPRMgetnextdsotype" (ByVal dso As Long, ByVal ref As Long, ByRef name As String, ByRef flag As Long) As Long
Declare Function XPRMgetnextdsoparam Lib "xprmvb" Alias "vbXPRMgetnextdsoparam" (ByVal dso As Long, ByVal ref As Long, ByRef name As String, ByRef desc As String, ByRef ptype As Long) As Long
Declare Function XPRMgetdsoparam Lib "xprmvb" Alias "vbXPRMgetdsoparam" (ByVal model As Long, ByVal dso As Long, ByVal name As String, ByRef ptype As Long, ByRef value As Variant) As Long
Declare Sub XPRMautounloaddso Lib "xprm_rt" Alias "_XPRMautounloaddso@4" (ByVal yesno As Long)
Declare Sub XPRMflushdso Lib "xprm_rt" Alias "_XPRMflushdso@0" ()
Declare Function XPRMgetnextdso Lib "xprm_rt" Alias "_XPRMgetnextdso@4" (ByVal dso As Long) As Long
Declare Function XPRMfinddso Lib "xprm_rt" Alias "_XPRMfinddso@4" (ByVal name As String) As Long
Declare Sub XPRMsetdsopath Lib "xprm_rt" Alias "_XPRMsetdsopath@4" (ByVal path As String)
Declare Function XPRMgetdsopath Lib "xprmvb" Alias "vbXPRMgetdsopath" (ByRef path As String) As Long
Declare Function XPRMdsotyptostr Lib "xprmvb" Alias "vbXPRMdsotyptostr" (ByVal model As Long, ByVal code As Long, ByVal value As Long, ByRef str As String) As Long
Declare Function XPRMgetdsoprop Lib "xprmvb" Alias "vbXPRMgetdsoprop" (ByVal dso As Long, ByVal what As Long, ByRef result As Variant) As Long


' Stream redirection
Declare Function XPRMsetdefstream Lib "xprmvb" Alias "vbXPRMsetdefstream" (ByVal model As Long, ByVal wmd As Long, ByVal name As String) As Long

' Begin/end licensing
Declare Function XPRMbeginlicensing Lib "xprm_rt" Alias "_XPRMbeginlicensing@4" (ByRef bIsLicensed As Long) As Long
Declare Function XPRMendlicensing Lib "xprm_rt" Alias "_XPRMendlicensing@0" () As Long

' the functions below are now obsolete but are included for backwards compatibility
' type interrogating
Declare Function XPRM_TYP Lib "xprmvb" Alias "vbXPRM_TYP" (ByVal t As Long) As Long
Declare Function XPRM_STR Lib "xprmvb" Alias "vbXPRM_STR" (ByVal t As Long) As Long
Declare Function XPRM_GRP Lib "xprmvb" Alias "vbXPRM_GRP" (ByVal t As Long) As Long

' IO driver
Declare Function XPRM_IO_CB Lib "xprmvb" Alias "vbXPRM_IO_CB" (ByVal address As Long) As String

' Callback-initialization IO driver
Declare Function XPRMcb_sendint Lib "xprm_rt" Alias "_XPRMcb_sendint@12" (ByVal cb As Long, ByVal i As Long, ByVal bFlush As Long) As Long
Declare Function XPRMcb_sendreal Lib "xprm_rt" Alias "_XPRMcb_sendreal@12" (ByVal cb As Long, ByVal d As Double, ByVal bFlush As Long) As Long
Declare Function XPRMcb_sendstring Lib "xprm_rt" Alias "_XPRMcb_sendstring@12" (ByVal cb As Long, ByVal s As String, ByVal bFlush As Long) As Long
Declare Function XPRMcb_sendctrl Lib "xprm_rt" Alias "_XPRMcb_sendctrl@9" (ByVal cb As Long, ByVal d As Byte, ByVal bFlush As Long) As Long


' Time functions
Declare Function XPRMdate2jdn Lib "xprmvb" Alias "vbXPRMdate2jdn" (ByVal y As Long, ByVal m As Long, ByVal d As Long) As Long
Declare Sub XPRMjdn2date Lib "xprmvb" Alias "vbXPRMjdn2date" (ByVal jd As Long, ByRef y As Long, ByRef m As Long, ByRef d As Long)
Declare Sub XPRMtime Lib "xprmvb" Alias "vbXPRMtime" (ByRef jdn As Long, ByRef t As Long, ByRef utc As Long)


' Debugging
Declare Function XPRMdbg_runmod Lib "xprm_rt" Alias "_XPRMdbg_runmod@20" (ByVal model As Long, ByRef returned As Long, ByVal parlist As String, ByVal dbgcb As Long, ByVal dbgctx As Long) As Long
Declare Function XPRMdbg_getnblndx Lib "xprm_rt" Alias "_XPRMdbg_getnblndx@4" (ByVal model As Long) As Long
Declare Function XPRMdbg_clearbrkp Lib "xprm_rt" Alias "_XPRMdbg_clearbrkp@8" (ByVal model As Long, ByVal lindex As Long) As Long
Declare Function XPRMdbg_setbrkp Lib "xprm_rt" Alias "_XPRMdbg_setbrkp@8" (ByVal model As Long, ByVal lindex As Long) As Long
Declare Function XPRMdbg_setstacklev Lib "xprm_rt" Alias "_XPRMdbg_setstacklev@8" (ByVal model As Long, ByVal level As Long) As Long
Declare Function XPRMdbg_getlocation Lib "xprmvb" Alias "vbXPRMdbg_getlocation" (ByVal model As Long, ByVal lindex As Long, ByRef line As Long, ByRef filename As String) As Long
Declare Function XPRMdbg_findproclndx Lib "xprm_rt" Alias "_XPRMdbg_findproclndx@8" (ByVal model As Long, ByVal proc As Long) As Long

Declare Function XPRMgetnextanident Lib "xprmvb" Alias "vbXPRMgetnextanident" (ByVal model As Long, ByRef ref As Long) As String
Private Declare Function cXPRMgetannotations Lib "xprm_rt" Alias "_XPRMgetannotations@20" (ByVal model As Long, ByVal ident As Long, ByVal prefix As Long, ByRef annStrings As Long, ByVal maxann As Long) As Long
Private Declare Function cXPRMgetdsoannotations Lib "xprm_rt" Alias "_XPRMgetdsoannotations@16" (ByVal dso As Long, ByVal prefix As Long, ByRef annStrings As Long, ByVal maxann As Long) As Long

Public Function XPRMgetannotations(ByVal model As Long, ByVal ident As String, ByVal prefix As String, ByRef annotations() As String, ByVal maxann As Long) As Long
    Dim i, nStrings As Long, nStringsFetched As Long
    Dim annptrs() As Long
    ReDim annptrs(1 To maxann + 1)
    Dim identptr As Long
    If ident = "" Then
        identptr = 0
    Else
        identptr = StrPtr(ident)
    End If
    
    nStrings = cXPRMgetannotations(model, identptr, StrPtr(prefix), annptrs(1), maxann)
    nStringsFetched = nStrings
    If nStringsFetched > maxann Then
        nStringsFetched = maxann
    End If
    
    If nStringsFetched > 0 Then
        For i = 1 To nStringsFetched
            annotations(LBound(annotations) + i - 1) = XPRMreadcstring(annptrs(i))
        Next
    End If
    XPRMgetannotations = nStrings
End Function

Public Function XPRMgetdsoannotations(ByVal dso As Long, ByVal prefix As String, ByRef annotations() As String, ByVal maxann As Long) As Long
    Dim i, nStrings As Long, nStringsFetched As Long
    Dim annptrs() As Long
    ReDim annptrs(1 To maxann + 1)
    
    nStrings = cXPRMgetdsoannotations(dso, StrPtr(prefix), annptrs(1), maxann)
    nStringsFetched = nStrings
    If nStringsFetched > maxann Then
        nStringsFetched = maxann
    End If
    
    If nStringsFetched > 0 Then
        For i = 1 To nStringsFetched
            annotations(LBound(annotations) + i - 1) = XPRMreadcstring(annptrs(i))
        Next
    End If
    XPRMgetdsoannotations = nStrings
End Function



#End If


' This function is intended to make it easier to wite code independent of 32bit-vs-64-bit and VBA6-vs-VBA7 concerns.
' The parameter "sets" should be an array of appropriate size, with element type being one of Variant, Long, LongPtr
' or LongLong. The actual XPRM API call will be made with a temporary array of Longs or LongPtrs (depending on VBA
' version) and the data will then be copied back if the call is successful.
Public Sub XPRMgetarrsetstovariant(ByVal mmarray As Variant, ByRef sets As Variant)
#If VBA7 <> 0 Then
    Dim tempsets() As LongPtr
#Else
    Dim tempsets() As Long
#End If
    XPRMarrayhelper_init tempsets, sets
    XPRMgetarrsets mmarray, tempsets
    XPRMarrayhelper_copy tempsets, sets
End Sub

Private Sub XPRMarrayhelper_redim(ByRef newarray As Variant, ByVal lb As Long, ByVal ub As Long)
#If VBA7 <> 0 Then
    ReDim newarray(lb To ub) As LongLong
#Else
    ReDim newarray(lb To ub) As Long
#End If
End Sub

Private Sub XPRMarrayhelper_init(ByRef newarray As Variant, ByRef oldarray As Variant, Optional ByVal copyold = False)
    XPRMarrayhelper_redim newarray, LBound(oldarray), UBound(oldarray)
    If copyold Then XPRMarrayhelper_copy oldarray, newarray
End Sub

Private Sub XPRMarrayhelper_copy(ByRef fromarray As Variant, ByRef toarray As Variant)
    If VarType(fromarray) = VarType(toarray) Then
        toarray = fromarray
        Exit Sub
    End If
        
    Dim i As Long
    For i = LBound(toarray) To UBound(toarray)
        toarray(i) = fromarray(i)
    Next i
End Sub


